--- a/assets/css/tools/medias.css
+++ b/assets/css/tools/medias.css
@@ -1,4 +1,4 @@
-@media (min-width: 670px) {
+@media (min-width: 600px) {
     .navbar .icon {
         display: none;
     }
@@ -7,3 +7,10 @@
         display: flex;
     }
 }
+
+
+@media (min-width: 500px) {
+    .discover > img {
+        width: 80%;  
+    }
+} 
